; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_dbginfo_elf.c_get_line.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_dbginfo_elf.c_get_line.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32, i8*, i32, i32*)* @get_line to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_line(%struct.TYPE_3__* %0, i32 %1, i8* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca [64 x i8], align 16
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %7, align 8
  store i32 %1, i32* %8, align 4
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %48

20:                                               ; preds = %5
  %21 = load i32, i32* %8, align 4
  %22 = getelementptr inbounds [64 x i8], [64 x i8]* %12, i64 0, i64 0
  %23 = call i8* @sdb_itoa(i32 %21, i8* %22, i32 16)
  store i8* %23, i8** %13, align 8
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i8*, i8** %13, align 8
  %28 = call i8* @sdb_get(i64 %26, i8* %27, i32 0)
  store i8* %28, i8** %14, align 8
  %29 = load i8*, i8** %14, align 8
  %30 = icmp ne i8* %29, null
  br i1 %30, label %31, label %47

31:                                               ; preds = %20
  %32 = load i8*, i8** %14, align 8
  %33 = call i8* @strchr(i8* %32, i8 signext 124)
  store i8* %33, i8** %15, align 8
  %34 = load i8*, i8** %15, align 8
  %35 = icmp ne i8* %34, null
  br i1 %35, label %36, label %46

36:                                               ; preds = %31
  %37 = load i8*, i8** %15, align 8
  store i8 0, i8* %37, align 1
  %38 = load i8*, i8** %9, align 8
  %39 = load i8*, i8** %14, align 8
  %40 = load i32, i32* %10, align 4
  %41 = call i32 @strncpy(i8* %38, i8* %39, i32 %40)
  %42 = load i8*, i8** %15, align 8
  %43 = getelementptr inbounds i8, i8* %42, i64 1
  %44 = call i32 @atoi(i8* %43)
  %45 = load i32*, i32** %11, align 8
  store i32 %44, i32* %45, align 4
  store i32 1, i32* %6, align 4
  br label %49

46:                                               ; preds = %31
  br label %47

47:                                               ; preds = %46, %20
  br label %48

48:                                               ; preds = %47, %5
  store i32 0, i32* %6, align 4
  br label %49

49:                                               ; preds = %48, %36
  %50 = load i32, i32* %6, align 4
  ret i32 %50
}

declare dso_local i8* @sdb_itoa(i32, i8*, i32) #1

declare dso_local i8* @sdb_get(i64, i8*, i32) #1

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i32 @strncpy(i8*, i8*, i32) #1

declare dso_local i32 @atoi(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
